<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeAcitivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/topBar"
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <ImageView
                android:id="@+id/backArrow"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical|start"
                android:layout_marginStart="10dp"
                android:contentDescription="navigationIcon"
                android:paddingVertical="12dp"
                android:src="@drawable/ic_round_arrow_back_24" />

            <TextView
                android:id="@+id/title_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/direct_chat_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            >

            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:ccp_arrowColor="?attr/colorOnBackground"
                app:ccp_contentColor="?attr/colorOnBackground" />


            <EditText
                android:id="@+id/phonenumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/phone_number_hint"
                android:paddingStart="10dp"
                android:inputType="phone"
                android:background="@drawable/rounded_edittext"
                android:layout_marginStart="5dp" />


        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/messages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/rounded_edittext"
                android:gravity="start"
                android:hint="@string/enter_your_message"
                android:inputType="textMultiLine"
                android:lines="5"
                android:maxLines="20"
                android:paddingHorizontal="14dp"
                android:paddingVertical="10dp"
                android:paddingTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:src="@drawable/ic_baseline_send_24"
                android:text="SEND"
                android:layout_margin="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/messages"
                app:layout_constraintStart_toStartOf="@+id/messages"
                app:layout_constraintTop_toBottomOf="@+id/messages"
                app:tint="?attr/colorPrimary" />

        </androidx.constraintlayout.widget.ConstraintLayout>



        <com.google.android.ads.nativetemplates.TemplateView
            android:id="@+id/templateView3"
            android:layout_width="match_parent"
            android:paddingHorizontal="10dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginVertical="10dp"
            app:gnt_template_type="@layout/gnt_medium_template_view" />

    </LinearLayout>
</ScrollView>